<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ListBG" >

     <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".45"  
         	android:gravity="bottom|center_horizontal"  >       	
		    <TextView
		        android:id="@+id/add_server_text_enter_ip"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/add_server_text_enter_ip"
		        android:textColor="@color/Black"
		        android:textSize="16sp" />
		    </TableRow>
		   
         <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".10" 
         	android:gravity="top|center_horizontal"   >
			    <TextView
		        android:id="@+id/add_server_text_openvdi_server"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/add_server_text_openvdi_server"
		        android:textColor="@color/Black"
		        android:gravity="center" 
		        android:textSize="16sp" /> 
          </TableRow>
 		
 		<TableRow
             android:id="@+id/tableRow3"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".10"
         	android:gravity="bottom|center_horizontal" >
			    		    
		    <EditText
		        android:id="@+id/add_server_connection_name"
		        android:layout_width="250sp"
		        android:layout_height="50sp"
		        android:background="@drawable/btn_login_active"
		        android:hint="@string/add_server_hint_connection_name"
		        android:paddingLeft="15sp"
		        android:paddingRight="15sp"
		        android:singleLine="true"
		        android:textSize="18sp" />
    	</TableRow>

    	 <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".45" 
         	android:layout_marginTop="10sp"
         	android:gravity="top|center_horizontal"          >
		    <Button
		        android:id="@+id/btnConnect"
		        android:layout_width="250sp"
		        android:layout_height="50sp"
		        android:background="@drawable/btn_state_login"
		        android:text="@string/add_server_btn_connect"
		        android:textSize="18sp"
		        android:textStyle="bold"/>

		</TableRow>
   </TableLayout>
</RelativeLayout>