<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ListBG" >
 <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".30"  
         	android:gravity="bottom|center_horizontal"  >
         </TableRow>
       <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".15"  
         	android:gravity="center|center_horizontal"  >
         		
			    <EditText
			        android:id="@+id/login_username"
			        android:layout_width="250sp"
			        android:layout_height="50sp"
			        android:background="@drawable/btn_login_active"
			        android:hint="@string/login_hint_username"
			        android:paddingLeft="15sp"
			        android:paddingRight="15sp"
			        android:singleLine="true"
			        android:textSize="18sp" />
         	</TableRow>    
       <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".15" 
         	android:gravity="center|center_horizontal"  >
		    	 <EditText
			        android:id="@+id/login_password"
			        android:layout_width="250sp"
			        android:layout_height="50sp"
			        android:background="@drawable/btn_login_active"
			        android:hint="@string/login_hint_password"
			        android:inputType="textPassword"
			        android:paddingLeft="15sp"
			        android:paddingRight="15sp"
			        android:singleLine="true"
			        android:textSize="18sp" />
         	</TableRow>     
   

       <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".15"  
         	android:gravity="center|center_horizontal"  >
		    	 	<EditText
				        android:id="@+id/login_domain"
				        android:layout_width="250sp"
				        android:layout_height="50sp"
				        android:background="@drawable/bg_login_domain"
				        android:focusable="false"
				        android:hint="@string/login_hint_domain"
				        android:paddingLeft="15sp"
				        android:paddingRight="15sp"
				        android:textSize="18sp" />
         	</TableRow>     
    
       <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="fill_parent"
         	android:layout_height="0dp" 
         	android:layout_weight=".25"  
         	android:gravity="center|center_horizontal"  >
		    	 	 <Button
				        android:id="@+id/btnLogin"
				        android:layout_width="250sp"
				        android:layout_height="50sp"
				        android:background="@drawable/btn_state_login"
				        android:text="@string/login"
				        android:textSize="18sp"
				        android:textStyle="bold" />
         	</TableRow>     
   
	</TableLayout>
</RelativeLayout>